<?xml version="1.0"?>
<package format="3">
  <name>drone_logger</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 package for drone logging.</description>
  <maintainer email="vfspurd@purdue.edu">Vertical Flight Systems Purdue</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-pynvml</exec_depend>
  <exec_depend>python3-codecarbon</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
